<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/info_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#2FA2C4" />

        <TextView
            android:id="@+id/desc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/info_desc1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#00BBBB" />
    
    <TextView
        android:id="@+id/desc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_desc2"
        android:textColor="#00BBBB"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    

    

    <TextView
            android:id="@+id/info_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="How To"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#2FA2C4" />
      <TextView
        android:id="@+id/desc5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Type in your log/note and insert a # symbol before the words you consider as a tag."
        android:textColor="#00BBBB"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      
      <TextView
            android:id="@+id/info_title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="Search"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#2FA2C4" />
       <TextView
        android:id="@+id/desc6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search by entering the tag or the set of tags in this format - "
        android:textColor="#00BBBB"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
       <TextView
        android:id="@+id/desc7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="#tag1 #tag2 #tag3"
        android:textColor="#00AAAA"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
       
       <TextView
            android:id="@+id/info_title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="Backup and Restore"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#2FA2C4" />
       
       <TextView
        android:id="@+id/desc10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Backup will create a database in your sdcard root folder. Restoring it will be useful in case you wanna reset or change devices.  "
        android:textColor="#00BBBB"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    	<TextView
            android:id="@+id/info_title5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="Possible Issues"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#2FA2C4" />       
       <TextView
        android:id="@+id/desc11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="Sometimes, if the app is force closed, it may display an error on re-entering the multipane tag view. Wait for a moment and then try. It should work now."
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#00AAAA" />
       
       <TextView
        android:id="@+id/desc8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/info_explore"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#00AAAA" />
       
           <TextView
        android:id="@+id/desc3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/info_desc3"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#00BBBB" />
    

    <TextView
        android:id="@+id/desc4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/info_desc4"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#00BBBB" />
    
    <TextView
        android:id="@+id/desc9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="Uses actionbarsherlock"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#00BBBB" />
    

</LinearLayout>
</ScrollView>